feat: trigger pipe

--- a/.github/workflows/dags.yml
+++ b/.github/workflows/dags.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
     paths:
-      - 'dags/**'
+      - 'airflow/dags/**'
 
 env:
   AIRFLOW_DAGS_FOLDER: /home/airflow/dags
